milestone 6: add real DFT
